force-app/main/default/objects/Lead/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <label>Home State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>