force-app/main/default/objects/Lead/fields/Hours_to_Converted__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Converted__c</fullName>
    <formula>ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE(  Converted_Date_Time__c  ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Converted_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( Converted_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate  ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate  - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours to Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>