force-app/main/default/objects/Lead/fields/Hours_to_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Unresponsive__c</fullName>
    <description>Business hours until set to Unresponsive</description>
    <formula>ROUND( 8 * ( 
( 5 * FLOOR( ( DATEVALUE( Date_set_to_Unresponsive__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( Date_set_to_Unresponsive__c ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 8 * ( MOD( Date_set_to_Unresponsive__c - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours to Unresponsive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>