force-app/main/default/objects/Lead/fields/How_Did_You_Hear_About_CoreVest__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_CoreVest__c</fullName>
    <label>How Did You Hear About CoreVest?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_Did_You_Hear_About_CoreVest</valueSetName>
    </valueSet>
</CustomField>