force-app/main/default/objects/Lead/fields/Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Inbound Date</label>
    <type>Date</type>
</CustomField>