force-app/main/default/objects/Lead/fields/Investment_Experience__c.field-meta.xml
<CustomField>
    <fullName>Investment_Experience__c</fullName>
    <description>This is the total number of properties or projects the investor has completed</description>
    <inlineHelpText>This is the total number of properties or projects the investor has completed</inlineHelpText>
    <label>Investment Experience</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loan_Product_s__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0 Properties</fullName>
            </value>
            <value>
                <fullName>Under 3 Properties</fullName>
            </value>
            <value>
                <fullName>1-4 Properties</fullName>
            </value>
            <value>
                <fullName>3-10 Properties</fullName>
            </value>
            <value>
                <fullName>3-19 Properties</fullName>
            </value>
            <value>
                <fullName>3-50 Properties</fullName>
            </value>
            <value>
                <fullName>5-19 Properties</fullName>
            </value>
            <value>
                <fullName>11-20 Properties</fullName>
            </value>
            <value>
                <fullName>20+ Properties</fullName>
            </value>
            <value>
                <fullName>20-50 Properties</fullName>
            </value>
            <value>
                <fullName>51-100 Properties</fullName>
            </value>
            <value>
                <fullName>50+ Properties</fullName>
            </value>
            <value>
                <fullName>100+ Properties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>