force-app/main/default/objects/Lead/fields/Is_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hot Lead</label>
    <type>Checkbox</type>
</CustomField>