force-app/main/default/objects/Lead/fields/Janati_RR__Round_Robin_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Round_Robin_Last_Date__c</fullName>
    <label>Round Robin Last Date</label>
    <type>DateTime</type>
</CustomField>