force-app/main/default/objects/Lead/fields/Janati_RR__Round_Robin_Result__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Round_Robin_Result__c</fullName>
    <label>Round Robin Result</label>
    <type>TextArea</type>
</CustomField>