force-app/main/default/objects/Lead/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Date last contacted</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>