force-app/main/default/objects/Lead/fields/Last_touch_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Last_touch_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last touch Checkbox</label>
    <type>Checkbox</type>
</CustomField>