force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <label>Lead Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>