force-app/main/default/objects/Lead/fields/Lending_Geography__c.field-meta.xml
<CustomField>
    <fullName>Lending_Geography__c</fullName>
    <description>Lender partnerships field</description>
    <label>Lending Geography State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>