force-app/main/default/objects/Lead/fields/Loan_Docs_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Docs_Approved_Date__c</fullName>
    <description>Lender partnerships field</description>
    <label>Loan Docs Approved Date</label>
    <type>Date</type>
</CustomField>