force-app/main/default/objects/Lead/fields/Loan_Docs_Submitted_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Loan_Docs_Submitted_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lender partnerships field</description>
    <label>Loan Docs Submitted For Approval</label>
    <type>Checkbox</type>
</CustomField>