force-app/main/default/objects/Lead/fields/Loan_Product_s__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product_s__c</fullName>
    <label>Loan Product(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build to Rent Complete</fullName>
            </value>
            <value>
                <fullName>Credit Line</fullName>
            </value>
            <value>
                <fullName>Fix and Flip Credit Line</fullName>
            </value>
            <value>
                <fullName>Freddie Mac Loan</fullName>
            </value>
            <value>
                <fullName>Ground Up Construction Loan</fullName>
            </value>
            <value>
                <fullName>Multifamily-CRE Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Multifamily-CRE Construction Loan</fullName>
            </value>
            <value>
                <fullName>Multifamily-CRE Term Loan</fullName>
            </value>
            <value>
                <fullName>Multifamily Loan</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Rental Aggregation Credit Line</fullName>
            </value>
            <value>
                <fullName>Rental Portfolio Loan</fullName>
            </value>
            <value>
                <fullName>Single Asset Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Single Project Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Single Property Rental Loan</fullName>
            </value>
            <value>
                <fullName>Single Rental Property Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>