force-app/main/default/objects/Lead/fields/Loan_Servicing_Sub_Servicer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Servicing_Sub_Servicer__c</fullName>
    <description>Lender partnerships field</description>
    <label>Loan Servicing Sub-Servicer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCI</fullName>
            </value>
            <value>
                <fullName>BSI</fullName>
            </value>
            <value>
                <fullName>StateBridge</fullName>
            </value>
            <value>
                <fullName>Berkadia</fullName>
            </value>
            <value>
                <fullName>ShellPoint</fullName>
            </value>
            <value>
                <fullName>Del Toro</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Faye Servicing</fullName>
            </value>
            <value>
                <fullName>Cohen Financial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>