force-app/main/default/objects/Lead/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <inlineHelpText>Requested Loan to Value</inlineHelpText>
    <label>LTV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 60%</fullName>
            </value>
            <value>
                <fullName>Under 65%</fullName>
            </value>
            <value>
                <fullName>60% to 65%</fullName>
            </value>
            <value>
                <fullName>65% to 70%</fullName>
            </value>
            <value>
                <fullName>66% to 70%</fullName>
            </value>
            <value>
                <fullName>70% to 75%</fullName>
            </value>
            <value>
                <fullName>Over 70%</fullName>
            </value>
            <value>
                <fullName>Over 75%</fullName>
            </value>
            <value>
                <fullName>60 to 65%</fullName>
                <isActive>false</isActive>
                <label>60 to 65%</label>
            </value>
            <value>
                <fullName>66 to 70%</fullName>
                <isActive>false</isActive>
                <label>66 to 70%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>