force-app/main/default/objects/Lead/fields/MLPA_Executed_Date_Bridge__c.field-meta.xml
<CustomField>
    <fullName>MLPA_Executed_Date_Bridge__c</fullName>
    <description>Bridge Mortgage Loan Purchase Agreement Executed Date</description>
    <inlineHelpText>Bridge Mortgage Loan Purchase Agreement Executed Date</inlineHelpText>
    <label>MLPA Executed Date (Bridge)</label>
    <type>Date</type>
</CustomField>