force-app/main/default/objects/Lead/fields/MLPA_Executed_Date_Rental__c.field-meta.xml
<CustomField>
    <fullName>MLPA_Executed_Date_Rental__c</fullName>
    <description>Rental Mortgage Loan Purchase Agreement Executed Date</description>
    <inlineHelpText>Rental Mortgage Loan Purchase Agreement Executed Date</inlineHelpText>
    <label>MLPA Executed Date (Rental)</label>
    <type>Date</type>
</CustomField>