force-app/main/default/objects/Lead/fields/MLPA_Sent_Date_Bridge__c.field-meta.xml
<CustomField>
    <fullName>MLPA_Sent_Date_Bridge__c</fullName>
    <description>Bridge Mortgage Loan Purchase Agreement Sent Date</description>
    <inlineHelpText>Bridge Mortgage Loan Purchase Agreement Sent Date</inlineHelpText>
    <label>MLPA Sent Date (Bridge)</label>
    <type>Date</type>
</CustomField>