force-app/main/default/objects/Lead/fields/MLPA_Sent_Date_Rental__c.field-meta.xml
<CustomField>
    <fullName>MLPA_Sent_Date_Rental__c</fullName>
    <description>Rental Mortgage Loan Purchase Agreement Sent Date</description>
    <inlineHelpText>Rental Mortgage Loan Purchase Agreement Sent Date</inlineHelpText>
    <label>MLPA Sent Date (Rental)</label>
    <type>Date</type>
</CustomField>