force-app/main/default/objects/Lead/fields/Monthly_of_Units_Ground_Up__c.field-meta.xml
<CustomField>
    <fullName>Monthly_of_Units_Ground_Up__c</fullName>
    <description>Lender partnerships field. The estimated average monthly count of ground up units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly count of ground up units in their lending portfolio.</inlineHelpText>
    <label>Monthly # of Units (Ground Up)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>