force-app/main/default/objects/Lead/fields/Monthly_Production_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Production_Volume__c</fullName>
    <label>Monthly Production Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $1M</fullName>
            </value>
            <value>
                <fullName>$1M to $3M</fullName>
            </value>
            <value>
                <fullName>$3M+ to $5M</fullName>
            </value>
            <value>
                <fullName>$5M+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>