force-app/main/default/objects/Lead/fields/Monthly_Volume_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume_Consumer__c</fullName>
    <description>Lender partnerships field. The estimated average monthly monetary volume of consumer units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly monetary volume of consumer units in their lending portfolio.</inlineHelpText>
    <label>Monthly Volume $ (Consumer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>