force-app/main/default/objects/Lead/fields/Monthly_Volume_MFR__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume_MFR__c</fullName>
    <description>Lender partnerships field. The estimated average monthly monetary volume of MFR units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly monetary volume of MFR units in their lending portfolio.</inlineHelpText>
    <label>Monthly Volume $ (MFR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>