force-app/main/default/objects/Lead/fields/Originating_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Originating_Lead_ID__c</fullName>
    <description>Capturing the Originating Lead Id for Accounts, Contacts, and Deal</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Originating Lead ID</label>
    <type>Text</type>
</CustomField>