force-app/main/default/objects/Lead/fields/Originator_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Originator_Reassignment__c</fullName>
    <label>Originator Reassignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Originator 2</fullName>
            </value>
            <value>
                <fullName>Originator 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>