force-app/main/default/objects/Lead/fields/Other_Monthly_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_of_Units__c</fullName>
    <formula>Other_Monthly_Units__c / Total_Monthly_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other - Monthly % of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>