force-app/main/default/objects/Lead/fields/Other_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Volume__c</fullName>
    <description>Lender partnerships field. The estimated average monthly monetary volume of other units in their lending portfolio. Other = categorized outside of the defined Monthly Volume $ fields provided.</description>
    <inlineHelpText>The estimated average monthly monetary volume of other units in their lending portfolio. Other = categorized outside of the defined Monthly Volume $ fields provided.</inlineHelpText>
    <label>Other - Monthly Volume ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>