force-app/main/default/objects/Lead/fields/Other_Trading_Partners__c.field-meta.xml
<CustomField>
    <fullName>Other_Trading_Partners__c</fullName>
    <label>Other Trading Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>