force-app/main/default/objects/Lead/fields/Owner_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Timezone__c</fullName>
    <formula>IF(TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Los_Angeles&quot; ||TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Tijuana&quot;, &quot;PST&quot;, 

IF(TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Denver&quot; || TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Phoenix&quot; , &quot;MST&quot;, 

IF(TEXT(Owner:User.TimeZoneSidKey)= &quot;America/New_York&quot; || TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Panama&quot; || TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Indiana/Indianapolis&quot;, &quot;EST&quot;,
 
IF(TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Chicago&quot;, &quot;CST&quot;,
IF(TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Anchorage&quot;, &quot;AST&quot;,
IF(TEXT(Owner:User.TimeZoneSidKey)= &quot;America/Adak&quot;, &quot;Hawaii-Aleutian Standard Time&quot;,



&quot;N/A&quot;))))))</formula>
    <label>Owner Timezone</label>
    <type>Text</type>
</CustomField>