force-app/main/default/objects/Lead/fields/Partnership_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Interest__c</fullName>
    <label>Partnership Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quick Referral</fullName>
            </value>
            <value>
                <fullName>Broker+</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Correspondent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>