force-app/main/default/objects/Lead/fields/Portal_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Portal_Last_Login__c</fullName>
    <label>Portal Last Login</label>
    <type>DateTime</type>
</CustomField>