force-app/main/default/objects/Lead/fields/Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Username__c</fullName>
    <description>Username used for the Loan Portal</description>
    <inlineHelpText>Username used for the Loan Portal</inlineHelpText>
    <label>Portal Username</label>
    <type>Email</type>
</CustomField>